# third_life

./: .gitignore  Cargo.toml  readme.md
influxdb-grafana/: docker-compose.yaml
influxdb-grafana/grafana/provisioning/datasources/: datasources.yaml
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: main.rs  time.rs  worlds.rs
src/common/: utils.rs
src/worlds/: food.rs  population.rs
third_life/: Cargo.toml  README.md
third_life/assets/config/config-1/: config.json  worlds.json
third_life/src/: animation.rs  config.rs  data_agg.rs  main.rs  time.rs  ui.rs  worlds.rs
third_life/src/common/: utils.rs
third_life/src/worlds/: config.rs  data_agg.rs  env_and_infra.rs  food.rs  food_consumption.rs  population.rs  ui.rs  wealth.rs
third_life/src/worlds/env_and_infra/: components.rs  sanitation_infra.rs
third_life/src/worlds/food/: components.rs  cow_farming.rs  events.rs  wheat_farming.rs
third_life/src/worlds/population/: components.rs  dying.rs  events.rs  food_consumption.rs  giving_birth.rs  relationships.rs
third_life/src/worlds/ui/: components.rs  population_ui.rs  resources_ui.rs
third_life/src/worlds/wealth/: components.rs  compontents.rs
