[package]
name = "third-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_egui = "0.25.0"
chrono = "0.4.34"
egui_plot = "0.26.2"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
proc_macros = { path = "../proc_macros" }
random_name_generator = "0.3.6"
